fix tab flickering

--- a/src/components/topic-container-mobile/topic-expose.css
+++ b/src/components/topic-container-mobile/topic-expose.css
@@ -34,6 +34,8 @@
     font-weight: 600;
     z-index: 4;
     display: flex;
+    transform: translateZ(0);
+    -webkit-transform: translateZ(0);
 }
 
 .feature-selector:hover {
@@ -62,4 +64,6 @@
     height: 3px;
     background: white;
     border-radius: 5px;
+    transform: translateZ(0);
+    -webkit-transform: translateZ(0);
 }
